This file documents the revision history for mod_gearman.

0.2    Sun Sep  5 16:14:41 CEST 2010
          - added support for config files

0.1    Mon Aug 23 15:01:15 CEST 2010
          - print warning if host/servicegroup does not exist
          - added AES-256 encryption (with base64 transport)
          - added host/servicegroup affinity
          - added exclusion by local host/servicegroups
          - added distribution of eventhandlers
          - added result queue worker
          - initial version