@@ -2,6 +2,7 @@ This file documents the revision history for mod_gearman.
 
 0.2    Sun Sep  5 16:14:41 CEST 2010
           - added support for config files
+          - fixed sending perfdata even when disabled by "process_performance_data" setting
 
 0.1    Mon Aug 23 15:01:15 CEST 2010
           - print warning if host/servicegroup does not exist
